Correct --add-opens and update external-tools section.