@@ -357,14 +357,18 @@ def createCheckTypeTask(projectName, taskName, checker, args = []) {
         } else {
             options.fork = true
             options.forkOptions.jvmArgs += [
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                // These are required in Java 16+ because the --illegal-access option is set to deny
+                // by default.  None of these packages are accessed via reflection, so the module
+                // only needs to be exported, but not opened.
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                // Required because the Checker Framework reflectively accesses private members in com.sun.tools.javac.comp.
                 "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                ]
+            ]
        }
     }
 }
